// the version of the language, use proto3 for contracts
syntax = "proto3";

// some core imports for AElf chain types
import "aelf/core.proto";
import "aelf/options.proto";
import "acs12.proto";

package aifeeds;

// import for using the google.protobuf.* type.
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AetherLink.Contracts.AIFeeds";

service AIRequestInterface {
    rpc HandleAIFeedsFulfillment(HandleAIFeedsFulfillmentInput) returns (google.protobuf.Empty);
}

message HandleAIFeedsFulfillmentInput {
  aelf.Hash trace_id = 1;
  bytes response = 2;
}

message ChatGptAPIResponse {
}